@@ -90,15 +90,15 @@ function advise_display_history() {
   $render_left["#student_id"] = $student_id;
   
   $school_id = db_get_school_id_for_student_id($student_id);
-  
-  //$rtn .= "<table border='0' cellspacing='0'>";
+    
   $old_session_d_t = 0;
+  $last_session_id = 0;
   $a_count = 0;
   $c = 0;
   $is_empty = true;
   $first_style = "color: maroon; font-weight:bold;";
   $advising_session_id_array = array();
-  
+   
   $on_mouse_over = "
             onmouseover='$(this).addClass(\"selection_highlight\");'
             onmouseout='$(this).removeClass(\"selection_highlight\");'
@@ -107,8 +107,55 @@ function advise_display_history() {
   $html = "";
   
 
+  $advising_session_groups_array = array();
+  $previous_sessions = array();
+  $session_group_code = $old_session_group_code = "";
+
+
+  // First, find all of the advising session "groups".  That is, advising sessions over multiple
+  // terms which were submitted together.
   $res = db_query("SELECT * FROM advising_sessions
-              WHERE student_id = '?'
+                    WHERE student_id = ?
+                    AND is_draft = 0
+                    AND is_empty = 0
+                    ORDER BY `posted` ", $student_id);
+  while($cur = db_fetch_array($res)) {
+
+    // Is this datetime within 5 seconds of the previous datetime?
+    // If so, they were likely saved together, and are part
+    // of the same advising session.  Otherwise, this is a NEW
+    // advising session.  The if statement below is testing is this
+    // a new advising session.
+    $test_d_t = intval($cur['posted']);
+    
+    //if ($test_d_t == $old_session_d_t || $test_d_t == $old_session_d_t + 1 || $test_d_t == $old_session_d_t + 2 ) {          
+    if ($test_d_t - 5 <= $old_session_d_t ) {          
+      $previous_sessions[$last_session_id] = $last_session_id;
+      $previous_sessions[$cur['advising_session_id']] = $cur['advising_session_id'];
+    }
+    else {      
+      if (count($previous_sessions) > 1) {
+        $session_group_code = md5(join(",", $previous_sessions));
+        $advising_session_groups_array[$session_group_code] = $previous_sessions;        
+      }
+      $previous_sessions = array();
+    }
+    
+    $old_session_d_t = $test_d_t;
+    $last_session_id = $cur['advising_session_id'];
+  } // while
+
+  if (count($previous_sessions) > 1) {
+    $session_group_code = md5(join(",", $previous_sessions));
+    $advising_session_groups_array[$session_group_code] = $previous_sessions;        
+  }
+
+
+  $old_session_d_t = 0;
+
+  // Now, actually assemble the HTML for our advising sessions for the screen.
+  $res = db_query("SELECT * FROM advising_sessions
+              WHERE student_id = ?
               AND is_draft = '0'
               AND is_empty = '0'
               ORDER BY `posted` DESC, `term_id` DESC ", $student_id);
@@ -116,7 +163,7 @@ function advise_display_history() {
 
     $dt = date("m/d/Y g:ia",convert_time($cur['posted']));
     $html = "";
-
+    
     // Is this datetime within 5 seconds of the previous datetime?
     // If so, they were likely saved together, and are part
     // of the same advising session.  Otherwise, this is a NEW
@@ -127,16 +174,29 @@ function advise_display_history() {
     {
 
       $old_session_d_t = $test_d_t;
+      
+
+      $group_link = "";      
+      // Figure out which advising group this belongs to (if any!) by searching our advising_session_groups_array for the advising session id
+      $asid = $cur['advising_session_id'];
+      foreach($advising_session_groups_array as $key => $details) {
+        if (in_array($asid, $details)) {                    
+          $turl = fp_url("advise/popup-display-summary", "show_as_group=yes&advising_session_id=" . join(",", $details));
+          $on_click = "popupLargeIframeDialog(\"" . $turl . "\",\"" . t("Advising Sessions - @date", array("@date" => $dt)) . "\",\"\");";  
+          $group_link = "<a href='javascript:$on_click' class='advising-summary-group-link'><i class='fa fa-list-ul'></i> " . t("View Combined") . "</a>";    
+        }
+      }      
+
       $advised_by = "<div class='history-advised-row history-advised-row-$a_count'>
-              <strong>" . t("Advised by") . " " . fp_get_faculty_name($cur['faculty_id'], FALSE) . "</strong>
+              <strong>" . t("Advised by") . " " . fp_get_faculty_name($cur['faculty_id'], FALSE) . "</strong>$group_link
             </div>";
+
+
+      $html .= "<div class=''>$advised_by</div>";      
+
       
-      
-      $html .= "<div class=' '>$advised_by</div>";      
-      
-      
-            
-          
+
+
       $a_count++;
 
     }
@@ -145,6 +205,11 @@ function advise_display_history() {
     if ($a_count > 1) {
       $first_style = "";
     }
+
+
+
+    
+
 
     $turl = fp_url("advise/popup-display-summary", "advising_session_id={$cur['advising_session_id']}");
 
@@ -353,18 +418,24 @@ function advise_display_history() {
  * If bool_html is set to FALSE, then we will return results in plain text, suitable for email.
  * 
  */
-function advise_popup_display_summary($advising_session_id = NULL, $bool_html = TRUE) {
+function advise_popup_display_summary($advising_session_id = NULL, $bool_html = TRUE, $bool_show_as_group = FALSE) {
   $rtn = "";
   $txt = "";
   
+  fp_add_css(fp_get_module_path("advise") . "/css/advise.css");  
   $db = get_global_database_handler();
   
   if ($advising_session_id == NULL) {
     $advising_session_id = rtrim(trim($_REQUEST["advising_session_id"]), ",");
   }
   
+  if ($_REQUEST['show_as_group'] === 'yes') {
+    $bool_show_as_group = TRUE;
+  }
+
   $bool_multiple = FALSE;
-  
+  $bool_show_transaction_details = TRUE;
+  $terms = "";
   // If we have commas in our advising_session_id, it means we had more than one that were passed to us!  We want to show
   // them all. 
   
@@ -420,7 +491,8 @@ function advise_popup_display_summary($advising_session_id = NULL, $bool_html = 
     $school_id = db_get_school_id_for_student_id($student_id);
   
     $term = get_term_description($cur['term_id'], FALSE, $school_id);
-  
+    $terms .= "<div class='summary-term-desc-multi'>$term</div>";
+
     $what_if_message = "";
     if (intval($cur['is_whatif']) == 1) {
         
@@ -449,103 +521,105 @@ function advise_popup_display_summary($advising_session_id = NULL, $bool_html = 
                                                               "%official" => $official_degree_title));
     }
   
+
+    $txt .= "\n-----  Advising Summary for $term -----\n";    
+    $txt .= "Student: " . $db->get_student_name($cur['student_id'], false) . " ({$cur['student_id']}) \n";    
+    $txt .= "Advisor: " . fp_get_faculty_name($cur['faculty_id'], false) . "\n";
+    $txt .= "Term: " . $term . "\n";
     
+
     $rtn .= "<table class='adv-history-table' width='100%'><td valign='top'>";
     
-    if ($page_is_mobile) {
-  
-    }
-    else {
+    
+    if ($bool_show_transaction_details) {
+
     
       $rtn .= "
         <table class='  summary-transaction-details' border='0' width='100%' cellpadding='3' cellspacing='0'>
-         <tr height='7'>
+          <tr height='7'>
           <td> </td>
-         </tr>
-         <tr>
+          </tr>
+          <tr>
           <td valign='top' width='15%'>" . t("Student:") . "</td>
           <td valign='top' width='40%'>" . $db->get_student_name($cur['student_id'], false) . " ({$cur['student_id']})</td>
           <td valign='top' rowspan='3'>
             <table width='100%' cellpadding='0' cellspacing='0'>
-          <tr height='20'>
-           <td width='100%' id='student-signature-line' valign='bottom'><hr noshade size='1' width='100%' color='black' style='margin: 0px;'></td>
-          </tr>
-          <tr height='20'>
-           <td width='100%' id='student-signature-caption' valign='top' align='right'><span style='font-size: 8pt;'>" . t("Student signature") . "</span></td>
-          </tr>
-  
-          <tr height='20'>
-           <td width='100%'  id='advisor-signature-line' valign='bottom'><hr noshade size='1' width='100%' color='black' style='margin: 0px;'></td>
-          </tr>
-          <tr>
-           <td width='100%'  id='advisor-signature-caption'valign='bottom' align='right'><span style='font-size: 8pt;'>" . t("Advisor signature") . "</span></td>
-          </tr>
-         <tr height='7'>
-          <td> </td>
-         </tr>
+              <tr height='20'>
+                <td width='100%' id='student-signature-line' valign='bottom'><hr noshade size='1' width='100%' color='black' style='margin: 0px;'></td>
+              </tr>
+              <tr height='20'>
+                <td width='100%' id='student-signature-caption' valign='top' align='right'><span style='font-size: 8pt;'>" . t("Student signature") . "</span></td>
+              </tr>
+
+              <tr height='20'>
+                <td width='100%'  id='advisor-signature-line' valign='bottom'><hr noshade size='1' width='100%' color='black' style='margin: 0px;'></td>
+              </tr>
+              <tr>
+                <td width='100%'  id='advisor-signature-caption'valign='bottom' align='right'><span style='font-size: 8pt;'>" . t("Advisor signature") . "</span></td>
+              </tr>
+              <tr height='7'>
+              <td> </td>
+              </tr>
     
           
-          </table> ";
-      
-      $txt .= "\n-----  Advising Summary for $term -----\n";    
-      $txt .= "Student: " . $db->get_student_name($cur['student_id'], false) . " ({$cur['student_id']}) \n";    
-          
-    } // else 
-    
-    $rtn .= "
+            </table> 
           </td>
-         </tr>
-         <tr>
+        </tr>
+        <tr>
           <td valign='top' width='10%'>" . t("Advisor:") . "</td>
           <td valign='top'>" . fp_get_faculty_name($cur['faculty_id'], false) . "</td>
-  
-         </tr>
-         <tr>
-          <td valign='top'>" . t("Term:") . "</td>
-          <td valign='top'>$term</td>
-  
-         </tr>
-         ";
+
+          </tr>
+          <tr>
+          <td valign='top'>" . t("Term(s):") . "</td>";
     
-    $txt .= "Advisor: " . fp_get_faculty_name($cur['faculty_id'], false) . "\n";
-    $txt .= "Term: " . $term . "\n";
-    
-    if (!$page_is_mobile) {
-      $rtn .= "
-         <tr>
-          <td valign='top' colspan='2'  id='summary-alternate-term'>
-          " . t("Alternate Term:") . " _____________________
-          </td>
-         </tr>";
+    $term_disp = $term;
+    if ($bool_multiple && $bool_show_as_group) {
+      $term_disp = "<!--group_terms-->";
     }
-         
-    $rtn .= "   
-         <tr>
-          <td valign='top' colspan='4'>
-          ";
-  
-    if ($degree_title_line != "")
-    {
-      $rtn .= t("Degree$ds:") . " $degree_title_line";
-      
-      $txt .= "Degree$ds: " . $degree_title_line . "\n";
-      
-    }
-  
+
     $rtn .= "
-         </tr>
-         </table>
-         <div class=' '><i>" . t("Submitted on") . " $dt.</i></div>
-         <div class=' '>$what_if_message</div>
-         <br>
-      ";
-  
+          <td valign='top'>$term_disp</td>
+
+          </tr>
+        
+          <tr>
+          <td valign='top' colspan='2'  id='summary-alternate-term'>
+          " . t("Alternate Term(s):") . " ____________________________
+          </td>
+          </tr>   
+          <tr>
+            <td valign='top' colspan='4'>
+            ";
+    
+      if ($degree_title_line != "")
+      {
+        $rtn .= t("Degree$ds:") . " $degree_title_line";
+        
+        $txt .= "Degree$ds: " . $degree_title_line . "\n";
+        
+      }
+    
+      $rtn .= "
+          </tr>
+          </table>
+          <div class=' '><i>" . t("Submitted on") . " $dt.</i></div>
+          <div class=' '>$what_if_message</div>
+          <br>
+        ";
+      if ($bool_show_as_group) {
+        $bool_show_transaction_details = FALSE;
+      }
+      
+      
+    } // bool_first_time_through
+
     $txt .= "Submitted on $dt \n";
     if ($what_if_message) {
       $txt .= "  " . fp_reduce_whitespace(strip_tags($what_if_message)) . "\n";
     }
     
-    $rtn .= fp_render_section_title(t("Advised Courses"));
+    $rtn .= fp_render_section_title(t("Advised Courses for @term", array("@term" => $term)));
   
     $txt .= "\nAdvised Courses:\n";
   
@@ -606,24 +680,36 @@ function advise_popup_display_summary($advising_session_id = NULL, $bool_html = 
     $txt .= "Total advised hours: " . $advised_courses_list->count_hours() . "\n";
     $txt .= "\n\n";
   
-    if (!$page_is_mobile) {
-      $rtn .= "<br>";
-      $rtn .= "<div class='summary-alternate-courses'>";
-      $rtn .= fp_render_section_title(t("Alternate Courses"));
-      $rtn .= "<div class='  alt-courses-desc-and-lines'>
-          " . t("You may use this space to write in alternate courses 
-          the student should enroll in, in the event that an 
-          advised course is full or unavailable.") . "
-          <br><br>
-          ___________________________________________________________________ <br><br>
-          ___________________________________________________________________
-          </div>  ";
-      $rtn .= "</div>";
-    }
+
   
     $rtn .= "</table>";
-    
+  
+    if ($bool_show_transaction_details && $bool_multiple) {
+      $rtn .= "<div class='history-summary-divider'>&nbsp;</div>";
+    }
+
   } // while, for the query itself!    
+
+
+  $rtn .= "<br>";
+  $rtn .= "<div class='summary-alternate-courses'>";
+  $rtn .= fp_render_section_title(t("Alternate Courses"));
+  $rtn .= "<div class='  alt-courses-desc-and-lines'>
+      " . t("You may use this space to write in alternate courses 
+      the student should enroll in, in the event that an 
+      advised course is full or unavailable.") . "
+      <br><br>
+      ___________________________________________________________________ <br><br>
+      ___________________________________________________________________
+      </div>  ";
+  $rtn .= "</div>";
+
+
+  if ($bool_multiple && $bool_show_as_group) {
+    $rtn = str_replace("<!--group_terms-->", $terms, $rtn);;
+  }
+
+
 
   // Are we NOT returning html?
   if (!$bool_html) {
