@@ -123,6 +123,11 @@
 }
 
 
+.advising-summary-group-link {
+  padding-left: 20px;
+}
+
+
 /* Subs popup */
 .advise-substitute-popup-transfer-course-title td {
   font-size: 0.9em;
@@ -132,4 +137,8 @@
 }
 
 
-
+.history-summary-divider {
+  margin-top: 40px;
+  margin-bottom: 40px;
+  border-bottom: 2px dashed #333;
+}
